--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-# ======================================
-# ? Application Configuration - Spring Boot 3.5
-# ======================================
 spring:
   application:
     name: cohan-demo-lambda
@@ -16,19 +13,18 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update   # create | update | validate | none
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
-  # Puedes activar perfiles específicos (dev, test, prod)
   profiles:
     active: dev
 
 # ======================================
-# ? Server Configuration
+# Server Configuration
 # ======================================
 server:
   port: 8080
@@ -36,7 +32,7 @@ server:
     context-path: /api
 
 # ======================================
-# ? Custom Properties (puedes usar en @Value)
+# Custom Properties
 # ======================================
 app:
   feature-flags:
